[metadata]
name = kanata
version = 1.1.1.0
author = rexor12
author_email = rrexor@gmail.com
description = A simple dependency injection framework for Python 3 applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rexor12/kanata
project_urls =
    Bug Tracker = https://github.com/rexor12/kanata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src